{
  "version": 4,
  "terraform_version": "0.12.19",
  "serial": 95,
  "lineage": "d4f982bf-3f52-110b-b1d4-dbccf17df360",
  "resources": [
    {
      "module": "module.cloudfront",
      "mode": "data",
      "type": "aws_lb",
      "name": "aws_alb",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "access_logs": [
              {
                "bucket": "denzi-s3-lb-log-ecs-fargate-437642037048",
                "enabled": true,
                "prefix": "test"
              }
            ],
            "arn": "arn:aws:elasticloadbalancing:us-east-2:437642037048:loadbalancer/app/denzi-fargate-lb/9d03ac00242807c1",
            "arn_suffix": "app/denzi-fargate-lb/9d03ac00242807c1",
            "dns_name": "denzi-fargate-lb-895254213.us-east-2.elb.amazonaws.com",
            "drop_invalid_header_fields": false,
            "enable_deletion_protection": false,
            "id": "arn:aws:elasticloadbalancing:us-east-2:437642037048:loadbalancer/app/denzi-fargate-lb/9d03ac00242807c1",
            "idle_timeout": 120,
            "internal": false,
            "ip_address_type": "ipv4",
            "load_balancer_type": "application",
            "name": "denzi-fargate-lb",
            "security_groups": [
              "sg-0c1c7db8fbb0101ef"
            ],
            "subnet_mapping": [
              {
                "subnet_id": "subnet-02d215714842d1fc7"
              },
              {
                "subnet_id": "subnet-0c1546a67befda52f"
              }
            ],
            "subnets": [
              "subnet-02d215714842d1fc7",
              "subnet-0c1546a67befda52f"
            ],
            "tags": {
              "Environment": "qa",
              "Tenant": "denzi"
            },
            "vpc_id": "vpc-04f974e2b7412306f",
            "zone_id": "Z3AADJGX6KTTL2"
          }
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_eip",
      "name": "nat_gateway",
      "each": "list",
      "provider": "provider.aws",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "association_id": "eipassoc-041e9d7a38376880f",
            "domain": "vpc",
            "id": "eipalloc-0eee94f3d542cc473",
            "network_interface": "eni-0413ada96bb4c8f26",
            "private_dns": "ip-16-255-0-198.us-east-2.compute.internal",
            "private_ip": "16.255.0.198",
            "public_dns": "ec2-3-19-25-159.us-east-2.compute.amazonaws.com",
            "public_ip": "3.19.25.159",
            "public_ipv4_pool": "amazon",
            "tags": {
              "Environment": "qa",
              "Name": "denzi-ecs-fargate-nat-0",
              "Tenant": "denzi"
            },
            "vpc": true
          },
          "dependencies": [
            "module.vpc.aws_internet_gateway.gw",
            "module.vpc.aws_vpc.main"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "association_id": "eipassoc-04cf840cc24ac4ca4",
            "domain": "vpc",
            "id": "eipalloc-0ee1d50f719f9b8d9",
            "network_interface": "eni-05b731efd09277271",
            "private_dns": "ip-16-255-1-77.us-east-2.compute.internal",
            "private_ip": "16.255.1.77",
            "public_dns": "ec2-3-14-179-100.us-east-2.compute.amazonaws.com",
            "public_ip": "3.14.179.100",
            "public_ipv4_pool": "amazon",
            "tags": {
              "Environment": "qa",
              "Name": "denzi-ecs-fargate-nat-1",
              "Tenant": "denzi"
            },
            "vpc": true
          },
          "dependencies": [
            "module.vpc.aws_internet_gateway.gw",
            "module.vpc.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "gw",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:437642037048:internet-gateway/igw-08454f73299eeeabd",
            "id": "igw-08454f73299eeeabd",
            "owner_id": "437642037048",
            "tags": {
              "Environment": "qa",
              "Name": "denzi-ecs-fargate",
              "Tenant": "denzi"
            },
            "vpc_id": "vpc-04f974e2b7412306f"
          },
          "dependencies": [
            "module.vpc.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.alb",
      "mode": "managed",
      "type": "aws_lb",
      "name": "default",
      "each": "list",
      "provider": "provider.aws",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "access_logs": [
              {
                "bucket": "denzi-s3-lb-log-ecs-fargate-437642037048",
                "enabled": true,
                "prefix": "test"
              }
            ],
            "arn": "arn:aws:elasticloadbalancing:us-east-2:437642037048:loadbalancer/app/denzi-fargate-lb/9d03ac00242807c1",
            "arn_suffix": "app/denzi-fargate-lb/9d03ac00242807c1",
            "dns_name": "denzi-fargate-lb-895254213.us-east-2.elb.amazonaws.com",
            "drop_invalid_header_fields": false,
            "enable_deletion_protection": false,
            "enable_http2": false,
            "id": "arn:aws:elasticloadbalancing:us-east-2:437642037048:loadbalancer/app/denzi-fargate-lb/9d03ac00242807c1",
            "idle_timeout": 120,
            "internal": false,
            "ip_address_type": "ipv4",
            "load_balancer_type": "application",
            "name": "denzi-fargate-lb",
            "security_groups": [
              "sg-0c1c7db8fbb0101ef"
            ],
            "subnet_mapping": [
              {
                "subnet_id": "subnet-02d215714842d1fc7"
              },
              {
                "subnet_id": "subnet-0c1546a67befda52f"
              }
            ],
            "subnets": [
              "subnet-02d215714842d1fc7",
              "subnet-0c1546a67befda52f"
            ],
            "tags": {
              "Environment": "qa",
              "Tenant": "denzi"
            },
            "vpc_id": "vpc-04f974e2b7412306f",
            "zone_id": "Z3AADJGX6KTTL2"
          },
          "dependencies": [
            "module.alb.aws_security_group.default",
            "module.s3_access_log.aws_s3_bucket.default",
            "module.s3_lb_log.aws_s3_bucket.default",
            "module.vpc.aws_subnet.public_subnet",
            "module.vpc.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.alb",
      "mode": "managed",
      "type": "aws_lb_listener",
      "name": "http",
      "each": "list",
      "provider": "provider.aws",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:elasticloadbalancing:us-east-2:437642037048:listener/app/denzi-fargate-lb/9d03ac00242807c1/32a451414e7876a5",
            "certificate_arn": null,
            "default_action": [
              {
                "authenticate_cognito": [],
                "authenticate_oidc": [],
                "fixed_response": [
                  {
                    "content_type": "text/plain",
                    "message_body": "ok",
                    "status_code": "200"
                  }
                ],
                "forward": [],
                "order": 1,
                "redirect": [],
                "target_group_arn": "",
                "type": "fixed-response"
              }
            ],
            "id": "arn:aws:elasticloadbalancing:us-east-2:437642037048:listener/app/denzi-fargate-lb/9d03ac00242807c1/32a451414e7876a5",
            "load_balancer_arn": "arn:aws:elasticloadbalancing:us-east-2:437642037048:loadbalancer/app/denzi-fargate-lb/9d03ac00242807c1",
            "port": 80,
            "protocol": "HTTP",
            "ssl_policy": "",
            "timeouts": null
          },
          "dependencies": [
            "module.alb.aws_lb.default",
            "module.alb.aws_security_group.default",
            "module.s3_access_log.aws_s3_bucket.default",
            "module.s3_lb_log.aws_s3_bucket.default",
            "module.vpc.aws_subnet.public_subnet",
            "module.vpc.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.alb",
      "mode": "managed",
      "type": "aws_lb_listener",
      "name": "https",
      "each": "list",
      "provider": "provider.aws",
      "instances": []
    },
    {
      "module": "module.alb",
      "mode": "managed",
      "type": "aws_lb_listener",
      "name": "redirect_http_to_https",
      "each": "list",
      "provider": "provider.aws",
      "instances": []
    },
    {
      "module": "module.alb",
      "mode": "managed",
      "type": "aws_lb_listener_rule",
      "name": "http",
      "each": "list",
      "provider": "provider.aws",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "action": [
              {
                "authenticate_cognito": [],
                "authenticate_oidc": [],
                "fixed_response": [],
                "forward": [],
                "order": 1,
                "redirect": [],
                "target_group_arn": "arn:aws:elasticloadbalancing:us-east-2:437642037048:targetgroup/denzi-fargate-lb/d957ecc4a7afa0c9",
                "type": "forward"
              }
            ],
            "arn": "arn:aws:elasticloadbalancing:us-east-2:437642037048:listener-rule/app/denzi-fargate-lb/9d03ac00242807c1/32a451414e7876a5/81edbd455ed3428c",
            "condition": [
              {
                "field": "path-pattern",
                "host_header": [],
                "http_header": [],
                "http_request_method": [],
                "path_pattern": [
                  {
                    "values": [
                      "/*"
                    ]
                  }
                ],
                "query_string": [],
                "source_ip": [],
                "values": [
                  "/*"
                ]
              }
            ],
            "id": "arn:aws:elasticloadbalancing:us-east-2:437642037048:listener-rule/app/denzi-fargate-lb/9d03ac00242807c1/32a451414e7876a5/81edbd455ed3428c",
            "listener_arn": "arn:aws:elasticloadbalancing:us-east-2:437642037048:listener/app/denzi-fargate-lb/9d03ac00242807c1/32a451414e7876a5",
            "priority": 1
          },
          "dependencies": [
            "module.alb.aws_lb.default",
            "module.alb.aws_lb_listener.http",
            "module.alb.aws_lb_target_group.default",
            "module.alb.aws_security_group.default",
            "module.s3_access_log.aws_s3_bucket.default",
            "module.s3_lb_log.aws_s3_bucket.default",
            "module.vpc.aws_subnet.public_subnet",
            "module.vpc.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.alb",
      "mode": "managed",
      "type": "aws_lb_listener_rule",
      "name": "https",
      "each": "list",
      "provider": "provider.aws",
      "instances": []
    },
    {
      "module": "module.alb",
      "mode": "managed",
      "type": "aws_lb_target_group",
      "name": "default",
      "each": "list",
      "provider": "provider.aws",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:elasticloadbalancing:us-east-2:437642037048:targetgroup/denzi-fargate-lb/d957ecc4a7afa0c9",
            "arn_suffix": "targetgroup/denzi-fargate-lb/d957ecc4a7afa0c9",
            "deregistration_delay": 600,
            "health_check": [
              {
                "enabled": true,
                "healthy_threshold": 5,
                "interval": 200,
                "matcher": "200",
                "path": "/management/health",
                "port": "traffic-port",
                "protocol": "HTTP",
                "timeout": 120,
                "unhealthy_threshold": 3
              }
            ],
            "id": "arn:aws:elasticloadbalancing:us-east-2:437642037048:targetgroup/denzi-fargate-lb/d957ecc4a7afa0c9",
            "lambda_multi_value_headers_enabled": false,
            "load_balancing_algorithm_type": "round_robin",
            "name": "denzi-fargate-lb",
            "port": 8080,
            "protocol": "HTTP",
            "proxy_protocol_v2": false,
            "slow_start": 0,
            "stickiness": [
              {
                "cookie_duration": 86400,
                "enabled": false,
                "type": "lb_cookie"
              }
            ],
            "tags": {
              "Environment": "qa",
              "Tenant": "denzi"
            },
            "target_type": "ip",
            "vpc_id": "vpc-04f974e2b7412306f"
          },
          "dependencies": [
            "module.alb.aws_lb.default",
            "module.alb.aws_security_group.default",
            "module.s3_access_log.aws_s3_bucket.default",
            "module.s3_lb_log.aws_s3_bucket.default",
            "module.vpc.aws_subnet.public_subnet",
            "module.vpc.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_nat_gateway",
      "name": "default",
      "each": "list",
      "provider": "provider.aws",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-0eee94f3d542cc473",
            "id": "nat-02b568d961dc85e31",
            "network_interface_id": "eni-0413ada96bb4c8f26",
            "private_ip": "16.255.0.198",
            "public_ip": "3.19.25.159",
            "subnet_id": "subnet-02d215714842d1fc7",
            "tags": {
              "Environment": "qa",
              "Name": "denzi-ecs-fargate-0",
              "Tenant": "denzi"
            }
          },
          "dependencies": [
            "module.vpc.aws_eip.nat_gateway",
            "module.vpc.aws_internet_gateway.gw",
            "module.vpc.aws_subnet.public_subnet",
            "module.vpc.aws_vpc.main"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-0ee1d50f719f9b8d9",
            "id": "nat-07d3b22289b74b82d",
            "network_interface_id": "eni-05b731efd09277271",
            "private_ip": "16.255.1.77",
            "public_ip": "3.14.179.100",
            "subnet_id": "subnet-0c1546a67befda52f",
            "tags": {
              "Environment": "qa",
              "Name": "denzi-ecs-fargate-1",
              "Tenant": "denzi"
            }
          },
          "dependencies": [
            "module.vpc.aws_eip.nat_gateway",
            "module.vpc.aws_internet_gateway.gw",
            "module.vpc.aws_subnet.public_subnet",
            "module.vpc.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_network_acl",
      "name": "private",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:437642037048:network-acl/acl-0ae8ab527c0005be2",
            "egress": [
              {
                "action": "allow",
                "cidr_block": "0.0.0.0/0",
                "from_port": 0,
                "icmp_code": 0,
                "icmp_type": 0,
                "ipv6_cidr_block": "",
                "protocol": "-1",
                "rule_no": 100,
                "to_port": 0
              }
            ],
            "id": "acl-0ae8ab527c0005be2",
            "ingress": [
              {
                "action": "allow",
                "cidr_block": "0.0.0.0/0",
                "from_port": 0,
                "icmp_code": 0,
                "icmp_type": 0,
                "ipv6_cidr_block": "",
                "protocol": "-1",
                "rule_no": 100,
                "to_port": 0
              }
            ],
            "owner_id": "437642037048",
            "subnet_id": null,
            "subnet_ids": [
              "subnet-0592494341729bd11",
              "subnet-0e8f53a4aaa9a9d71"
            ],
            "tags": {
              "Environment": "qa",
              "Name": "denzi-ecs-fargate-private",
              "Tenant": "denzi"
            },
            "vpc_id": "vpc-04f974e2b7412306f"
          },
          "dependencies": [
            "module.vpc.aws_subnet.private_subnet",
            "module.vpc.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_network_acl",
      "name": "public",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:437642037048:network-acl/acl-029c4f74b1d034895",
            "egress": [
              {
                "action": "allow",
                "cidr_block": "0.0.0.0/0",
                "from_port": 0,
                "icmp_code": 0,
                "icmp_type": 0,
                "ipv6_cidr_block": "",
                "protocol": "-1",
                "rule_no": 100,
                "to_port": 0
              }
            ],
            "id": "acl-029c4f74b1d034895",
            "ingress": [
              {
                "action": "allow",
                "cidr_block": "0.0.0.0/0",
                "from_port": 0,
                "icmp_code": 0,
                "icmp_type": 0,
                "ipv6_cidr_block": "",
                "protocol": "-1",
                "rule_no": 100,
                "to_port": 0
              }
            ],
            "owner_id": "437642037048",
            "subnet_id": null,
            "subnet_ids": [
              "subnet-02d215714842d1fc7",
              "subnet-0c1546a67befda52f"
            ],
            "tags": {
              "Environment": "qa",
              "Name": "denzi-ecs-fargate-public",
              "Tenant": "denzi"
            },
            "vpc_id": "vpc-04f974e2b7412306f"
          },
          "dependencies": [
            "module.vpc.aws_subnet.public_subnet",
            "module.vpc.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_network_acl_rule",
      "name": "private_egress",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "cidr_block": "0.0.0.0/0",
            "egress": true,
            "from_port": 0,
            "icmp_code": null,
            "icmp_type": null,
            "id": "nacl-76132331",
            "ipv6_cidr_block": "",
            "network_acl_id": "acl-0ae8ab527c0005be2",
            "protocol": "all",
            "rule_action": "allow",
            "rule_number": 100,
            "to_port": 0
          },
          "dependencies": [
            "module.vpc.aws_network_acl.private",
            "module.vpc.aws_subnet.private_subnet",
            "module.vpc.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_network_acl_rule",
      "name": "private_ingress",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "cidr_block": "0.0.0.0/0",
            "egress": false,
            "from_port": 0,
            "icmp_code": null,
            "icmp_type": null,
            "id": "nacl-1812099522",
            "ipv6_cidr_block": "",
            "network_acl_id": "acl-0ae8ab527c0005be2",
            "protocol": "all",
            "rule_action": "allow",
            "rule_number": 100,
            "to_port": 0
          },
          "dependencies": [
            "module.vpc.aws_network_acl.private",
            "module.vpc.aws_subnet.private_subnet",
            "module.vpc.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_network_acl_rule",
      "name": "public_egress",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "cidr_block": "0.0.0.0/0",
            "egress": true,
            "from_port": 0,
            "icmp_code": null,
            "icmp_type": null,
            "id": "nacl-3664076287",
            "ipv6_cidr_block": "",
            "network_acl_id": "acl-029c4f74b1d034895",
            "protocol": "all",
            "rule_action": "allow",
            "rule_number": 100,
            "to_port": 0
          },
          "dependencies": [
            "module.vpc.aws_network_acl.public",
            "module.vpc.aws_subnet.public_subnet",
            "module.vpc.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_network_acl_rule",
      "name": "public_ingress",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "cidr_block": "0.0.0.0/0",
            "egress": false,
            "from_port": 0,
            "icmp_code": null,
            "icmp_type": null,
            "id": "nacl-1980123469",
            "ipv6_cidr_block": "",
            "network_acl_id": "acl-029c4f74b1d034895",
            "protocol": "all",
            "rule_action": "allow",
            "rule_number": 100,
            "to_port": 0
          },
          "dependencies": [
            "module.vpc.aws_network_acl.public",
            "module.vpc.aws_subnet.public_subnet",
            "module.vpc.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route",
      "name": "private",
      "each": "list",
      "provider": "provider.aws",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "destination_cidr_block": "0.0.0.0/0",
            "destination_ipv6_cidr_block": "",
            "destination_prefix_list_id": "",
            "egress_only_gateway_id": "",
            "gateway_id": "",
            "id": "r-rtb-0f9f6e7d661dd5d621080289494",
            "instance_id": "",
            "instance_owner_id": "",
            "nat_gateway_id": "nat-02b568d961dc85e31",
            "network_interface_id": "",
            "origin": "CreateRoute",
            "route_table_id": "rtb-0f9f6e7d661dd5d62",
            "state": "active",
            "timeouts": null,
            "transit_gateway_id": "",
            "vpc_peering_connection_id": ""
          },
          "dependencies": [
            "module.vpc.aws_eip.nat_gateway",
            "module.vpc.aws_internet_gateway.gw",
            "module.vpc.aws_nat_gateway.default",
            "module.vpc.aws_route_table.private",
            "module.vpc.aws_subnet.public_subnet",
            "module.vpc.aws_vpc.main"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "destination_cidr_block": "0.0.0.0/0",
            "destination_ipv6_cidr_block": "",
            "destination_prefix_list_id": "",
            "egress_only_gateway_id": "",
            "gateway_id": "",
            "id": "r-rtb-0120dd1e5950d20c81080289494",
            "instance_id": "",
            "instance_owner_id": "",
            "nat_gateway_id": "nat-07d3b22289b74b82d",
            "network_interface_id": "",
            "origin": "CreateRoute",
            "route_table_id": "rtb-0120dd1e5950d20c8",
            "state": "active",
            "timeouts": null,
            "transit_gateway_id": "",
            "vpc_peering_connection_id": ""
          },
          "dependencies": [
            "module.vpc.aws_eip.nat_gateway",
            "module.vpc.aws_internet_gateway.gw",
            "module.vpc.aws_nat_gateway.default",
            "module.vpc.aws_route_table.private",
            "module.vpc.aws_subnet.public_subnet",
            "module.vpc.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route",
      "name": "public",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "destination_cidr_block": "0.0.0.0/0",
            "destination_ipv6_cidr_block": "",
            "destination_prefix_list_id": "",
            "egress_only_gateway_id": "",
            "gateway_id": "igw-08454f73299eeeabd",
            "id": "r-rtb-030d8c00137235f791080289494",
            "instance_id": "",
            "instance_owner_id": "",
            "nat_gateway_id": "",
            "network_interface_id": "",
            "origin": "CreateRoute",
            "route_table_id": "rtb-030d8c00137235f79",
            "state": "active",
            "timeouts": null,
            "transit_gateway_id": "",
            "vpc_peering_connection_id": ""
          },
          "dependencies": [
            "module.vpc.aws_internet_gateway.gw",
            "module.vpc.aws_route_table.public",
            "module.vpc.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "private",
      "each": "list",
      "provider": "provider.aws",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtb-0f9f6e7d661dd5d62",
            "owner_id": "437642037048",
            "propagating_vgws": [],
            "route": [
              {
                "cidr_block": "0.0.0.0/0",
                "egress_only_gateway_id": "",
                "gateway_id": "",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "nat_gateway_id": "nat-02b568d961dc85e31",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Environment": "qa",
              "Name": "denzi-ecs-fargate-private-0",
              "Tenant": "denzi"
            },
            "vpc_id": "vpc-04f974e2b7412306f"
          },
          "dependencies": [
            "module.vpc.aws_vpc.main"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtb-0120dd1e5950d20c8",
            "owner_id": "437642037048",
            "propagating_vgws": [],
            "route": [
              {
                "cidr_block": "0.0.0.0/0",
                "egress_only_gateway_id": "",
                "gateway_id": "",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "nat_gateway_id": "nat-07d3b22289b74b82d",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Environment": "qa",
              "Name": "denzi-ecs-fargate-private-1",
              "Tenant": "denzi"
            },
            "vpc_id": "vpc-04f974e2b7412306f"
          },
          "dependencies": [
            "module.vpc.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "public",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtb-030d8c00137235f79",
            "owner_id": "437642037048",
            "propagating_vgws": [],
            "route": [
              {
                "cidr_block": "0.0.0.0/0",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-08454f73299eeeabd",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Environment": "qa",
              "Name": "denzi-ecs-fargate-public",
              "Tenant": "denzi"
            },
            "vpc_id": "vpc-04f974e2b7412306f"
          },
          "dependencies": [
            "module.vpc.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "private",
      "each": "list",
      "provider": "provider.aws",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0abc282e218caa4bb",
            "route_table_id": "rtb-0f9f6e7d661dd5d62",
            "subnet_id": "subnet-0592494341729bd11"
          },
          "dependencies": [
            "module.vpc.aws_route_table.private",
            "module.vpc.aws_subnet.private_subnet",
            "module.vpc.aws_vpc.main"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0ea5e9a4cb468f11d",
            "route_table_id": "rtb-0120dd1e5950d20c8",
            "subnet_id": "subnet-0e8f53a4aaa9a9d71"
          },
          "dependencies": [
            "module.vpc.aws_route_table.private",
            "module.vpc.aws_subnet.private_subnet",
            "module.vpc.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "public",
      "each": "list",
      "provider": "provider.aws",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-01bf17d8db403fe43",
            "route_table_id": "rtb-030d8c00137235f79",
            "subnet_id": "subnet-02d215714842d1fc7"
          },
          "dependencies": [
            "module.vpc.aws_route_table.public",
            "module.vpc.aws_subnet.public_subnet",
            "module.vpc.aws_vpc.main"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0168204a57d81ec87",
            "route_table_id": "rtb-030d8c00137235f79",
            "subnet_id": "subnet-0c1546a67befda52f"
          },
          "dependencies": [
            "module.vpc.aws_route_table.public",
            "module.vpc.aws_subnet.public_subnet",
            "module.vpc.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.alb",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "default",
      "each": "list",
      "provider": "provider.aws",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:437642037048:security-group/sg-0c1c7db8fbb0101ef",
            "description": "Managed by Terraform",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0c1c7db8fbb0101ef",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              }
            ],
            "name": "denzi-fargate-lb-alb",
            "name_prefix": null,
            "owner_id": "437642037048",
            "revoke_rules_on_delete": false,
            "tags": {
              "Environment": "qa",
              "Name": "denzi-fargate-lb-alb",
              "Tenant": "denzi"
            },
            "timeouts": null,
            "vpc_id": "vpc-04f974e2b7412306f"
          },
          "dependencies": [
            "module.vpc.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.ecs_fargate",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "default",
      "each": "list",
      "provider": "provider.aws",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:437642037048:security-group/sg-0fa667d8282ff536c",
            "description": "Managed by Terraform",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0fa667d8282ff536c",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 8080,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 8080
              }
            ],
            "name": "denzi-task-definition-ecs-fargate",
            "name_prefix": null,
            "owner_id": "437642037048",
            "revoke_rules_on_delete": false,
            "tags": {
              "Environment": "qa",
              "Name": "denzi-task-definition-ecs-fargate",
              "Tenant": "denzi"
            },
            "timeouts": null,
            "vpc_id": "vpc-04f974e2b7412306f"
          },
          "dependencies": [
            "module.vpc.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.rds",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "rds-security-group",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:437642037048:security-group/sg-0fde21c292c18e8d6",
            "description": "Managed by Terraform",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0fde21c292c18e8d6",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 3306,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 3306
              }
            ],
            "name": "denzidbservice-sg-name",
            "name_prefix": null,
            "owner_id": "437642037048",
            "revoke_rules_on_delete": false,
            "tags": {},
            "timeouts": null,
            "vpc_id": "vpc-04f974e2b7412306f"
          },
          "dependencies": [
            "module.vpc.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.alb",
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "egress",
      "each": "list",
      "provider": "provider.aws",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": [
              "0.0.0.0/0"
            ],
            "description": "",
            "from_port": 0,
            "id": "sgrule-4086863972",
            "ipv6_cidr_blocks": [],
            "prefix_list_ids": [],
            "protocol": "-1",
            "security_group_id": "sg-0c1c7db8fbb0101ef",
            "self": false,
            "source_security_group_id": null,
            "to_port": 0,
            "type": "egress"
          },
          "dependencies": [
            "module.alb.aws_security_group.default",
            "module.vpc.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.ecs_fargate",
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "egress",
      "each": "list",
      "provider": "provider.aws",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": [
              "0.0.0.0/0"
            ],
            "description": "",
            "from_port": 0,
            "id": "sgrule-572298880",
            "ipv6_cidr_blocks": [],
            "prefix_list_ids": [],
            "protocol": "-1",
            "security_group_id": "sg-0fa667d8282ff536c",
            "self": false,
            "source_security_group_id": null,
            "to_port": 0,
            "type": "egress"
          },
          "dependencies": [
            "module.ecs_fargate.aws_security_group.default",
            "module.vpc.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.ecs_fargate",
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "ingress",
      "each": "list",
      "provider": "provider.aws",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": [
              "0.0.0.0/0"
            ],
            "description": "",
            "from_port": 8080,
            "id": "sgrule-2412512901",
            "ipv6_cidr_blocks": [],
            "prefix_list_ids": [],
            "protocol": "tcp",
            "security_group_id": "sg-0fa667d8282ff536c",
            "self": false,
            "source_security_group_id": null,
            "to_port": 8080,
            "type": "ingress"
          },
          "dependencies": [
            "module.alb.aws_lb.default",
            "module.alb.aws_lb_target_group.default",
            "module.alb.aws_security_group.default",
            "module.ecs_fargate.aws_security_group.default",
            "module.s3_access_log.aws_s3_bucket.default",
            "module.s3_lb_log.aws_s3_bucket.default",
            "module.vpc.aws_subnet.public_subnet",
            "module.vpc.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.alb",
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "ingress_http",
      "each": "list",
      "provider": "provider.aws",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": [
              "0.0.0.0/0"
            ],
            "description": "",
            "from_port": 80,
            "id": "sgrule-2380557442",
            "ipv6_cidr_blocks": [],
            "prefix_list_ids": [],
            "protocol": "tcp",
            "security_group_id": "sg-0c1c7db8fbb0101ef",
            "self": false,
            "source_security_group_id": null,
            "to_port": 80,
            "type": "ingress"
          },
          "dependencies": [
            "module.alb.aws_security_group.default",
            "module.vpc.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.alb",
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "ingress_https",
      "each": "list",
      "provider": "provider.aws",
      "instances": []
    },
    {
      "module": "module.rds",
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "outbound_rule",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": [
              "0.0.0.0/0"
            ],
            "description": "",
            "from_port": 0,
            "id": "sgrule-3088417484",
            "ipv6_cidr_blocks": [],
            "prefix_list_ids": [],
            "protocol": "-1",
            "security_group_id": "sg-0fde21c292c18e8d6",
            "self": false,
            "source_security_group_id": null,
            "to_port": 0,
            "type": "egress"
          },
          "dependencies": [
            "module.rds.aws_security_group.rds-security-group",
            "module.vpc.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.rds",
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "rds-security-group-rule",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": [
              "0.0.0.0/0"
            ],
            "description": "",
            "from_port": 3306,
            "id": "sgrule-2288497793",
            "ipv6_cidr_blocks": [],
            "prefix_list_ids": [],
            "protocol": "tcp",
            "security_group_id": "sg-0fde21c292c18e8d6",
            "self": false,
            "source_security_group_id": null,
            "to_port": 3306,
            "type": "ingress"
          },
          "dependencies": [
            "module.rds.aws_security_group.rds-security-group",
            "module.vpc.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "private_subnet",
      "each": "list",
      "provider": "provider.aws",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:437642037048:subnet/subnet-0592494341729bd11",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-2a",
            "availability_zone_id": "use2-az1",
            "cidr_block": "16.255.2.0/24",
            "id": "subnet-0592494341729bd11",
            "map_public_ip_on_launch": false,
            "owner_id": "437642037048",
            "tags": {
              "Environment": "qa",
              "Name": "denzi-ecs-fargate-private-0",
              "Tenant": "denzi"
            },
            "vpc_id": "vpc-04f974e2b7412306f"
          },
          "dependencies": [
            "module.vpc.aws_vpc.main"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:437642037048:subnet/subnet-0e8f53a4aaa9a9d71",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-2b",
            "availability_zone_id": "use2-az2",
            "cidr_block": "16.255.3.0/24",
            "id": "subnet-0e8f53a4aaa9a9d71",
            "map_public_ip_on_launch": false,
            "owner_id": "437642037048",
            "tags": {
              "Environment": "qa",
              "Name": "denzi-ecs-fargate-private-1",
              "Tenant": "denzi"
            },
            "vpc_id": "vpc-04f974e2b7412306f"
          },
          "dependencies": [
            "module.vpc.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "public_subnet",
      "each": "list",
      "provider": "provider.aws",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:437642037048:subnet/subnet-02d215714842d1fc7",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-2a",
            "availability_zone_id": "use2-az1",
            "cidr_block": "16.255.0.0/24",
            "id": "subnet-02d215714842d1fc7",
            "map_public_ip_on_launch": true,
            "owner_id": "437642037048",
            "tags": {
              "Environment": "qa",
              "Name": "denzi-ecs-fargate-public-0",
              "Tenant": "denzi"
            },
            "vpc_id": "vpc-04f974e2b7412306f"
          },
          "dependencies": [
            "module.vpc.aws_vpc.main"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:437642037048:subnet/subnet-0c1546a67befda52f",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-2b",
            "availability_zone_id": "use2-az2",
            "cidr_block": "16.255.1.0/24",
            "id": "subnet-0c1546a67befda52f",
            "map_public_ip_on_launch": true,
            "owner_id": "437642037048",
            "tags": {
              "Environment": "qa",
              "Name": "denzi-ecs-fargate-public-1",
              "Tenant": "denzi"
            },
            "vpc_id": "vpc-04f974e2b7412306f"
          },
          "dependencies": [
            "module.vpc.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_vpc",
      "name": "main",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:437642037048:vpc/vpc-04f974e2b7412306f",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "16.255.0.0/16",
            "default_network_acl_id": "acl-083061b58a15ee2a2",
            "default_route_table_id": "rtb-020d50a0c5fab4529",
            "default_security_group_id": "sg-01fe691a96f3cfbdf",
            "dhcp_options_id": "dopt-c545b2ae",
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "id": "vpc-04f974e2b7412306f",
            "instance_tenancy": "default",
            "main_route_table_id": "rtb-020d50a0c5fab4529",
            "owner_id": "437642037048",
            "tags": {
              "Environment": "qa",
              "Name": "denzi-ecs-fargate",
              "Tenant": "denzi"
            }
          }
        }
      ]
    }
  ]
}